--- a/index.html
+++ b/index.html
@@ -121,24 +121,47 @@
 </head>
 
 <body>
+<br>
+<br>
+<br>
+
 
   <div class="brand">L'alcool : Halte aux préjugés !</div>
    <!--      <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>       -->
+<br>
+<br><br>
+<br><br>
+
 
    <!-- Introduction -->
    <div class="container">
      <div class="box">
-       <hr>
- 				<h2 class="intro-text text-center">
+			<hr>
+ 				<h1 class="intro-text text-center">
  					<strong>On a tous des préjugés sur l'alcool : sont-ils tous vrais?</strong>
- 				</h2>
- 			<hr>
-       <div class="commentaires" align="middle">
-       <p><strong> Rien de moins sûr :</strong>
-       Lisez la suite !<p>
-       </div>
-         </div>
+ 				</h1>
+				<hr>
+				<center>
+				<img  align="middle" src="img/image1.png" width ="500px" height="340px" >
+				</center>
+ 			
+			<div class="commentaires" align="middle">
+			<p><strong> Rien de moins sûr :</strong>
+			Lisez la suite !<p>
+			</div>
+         
+	</div>
    </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
@@ -155,7 +178,7 @@
 			<svg width="1000" height"600" viewBox="0 0 1000 600" id="scatter-size-and-color" ></svg>
 			<br>
 			<div class="commentaires" align="middle">
-			<p>N'avez vous jamais entendu "l'alcool c'est mauvais tu finiras par avoir un cirrhose" ?<p>
+			<p>N'avez vous jamais entendu "l'alcool c'est mauvais tu finiras par avoir une cirrhose" ?<p>
 			<p>On vous rassure, au niveau mondial <strong> l'espérance de vie est la plus élevée là où la consommation d'alcool est aussi la plus élevée.</strong> Coïncidence?<p>
 			<p><strong> Conclusion :</strong>
 			Buvez avec modération, sauf quand il s'agit de boire nos paroles !<p>
@@ -253,7 +276,7 @@
       <br>
       <p> <p>
       Au palmarès des plus gros consommateurs de bières il ne serait pas étonnant de retrouver nos voisins allemands, anglais ou irlandais.
-      <p>Et pourtant la réalité est tout autre, la <strong>Namibie sort vainqueur par KO avec 7.16 grammes d'alcool </strong> de bières consommés annuellement par habitant en 2012.
+      <p>Et pourtant la réalité est tout autre, la <strong>Namibie sort vainqueur par KO avec 7.16 grammes d'alcool </strong> de bière consommés annuellement par habitant en 2012.
       <p> Cela correspond à environ 140 litres de bières bus tous les ans par chaque namibien, impressionant n'est-ce pas?
       <p> En comparaison nous les français sommes à 44 litres, petits joueurs !
       <p>Les européens les mieux classés sont la République Tchèque et l'Allemagne. Aucune trace des anglais dans le top 20.
