--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
  				</h1>
 				<hr>
 				<center>
-				<img  align="middle" src="img/Image1.png" width ="500px" height="340px" >
+				<img  align="middle" src="img/imgintro.png" width ="500px" height="340px" >
 				</center>
  			
 			<div class="commentaires" align="middle">
