--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
       <br>
       <p> <p>
       Au palmarès des plus gros consommateurs de bières il ne serait pas étonnant de retrouver nos voisins allemands, anglais ou irlandais.
-      <p>Et pourtant la réalité est tout autre, la <strong>Namibie sort vainqueur par KO avec 7.16 grammes d'alcool </strong> de bière consommés annuellement par habitant en 2012.
-      <p> Cela correspond à environ 140 litres de bières bus tous les ans par chaque namibien, impressionant n'est-ce pas ?
+      <p>Et pourtant la réalité est tout autre, la <strong>Namibie sort vainqueur par KO avec 7.16 litres d'alcool pur </strong> de bière consommés annuellement par habitant en 2012.
+      <p> Sachant qu'1L de bière est environ égal à 0.05L d'alcool pur, cela correspond à environ 140 litres de bière bus tous les ans par chaque namibien, impressionant n'est-ce pas ?
       <p> En comparaison nous les français sommes à 44 litres, petits joueurs !
       <p>Les européens les mieux classés sont la République Tchèque et l'Allemagne. Aucune trace des anglais dans le top 20.
 
