--- a/charts/BeerConsumption.html
+++ b/charts/BeerConsumption.html
@@ -130,7 +130,7 @@
 
         chart.yAxis.tickFormat(d3.format(',.2f'));
 
-        chart.yAxis.axisLabel("Consommation de bière (en gr d'alcool pur par habitant et par an)");
+        chart.yAxis.axisLabel("Consommation de bière (en litres d'alcool pur par habitant et par an)");
 
         d3.select('#chart1 svg')
             .datum(long_short_data)
